# course1_student_guide

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
demo/: README.md
demo/exports/: .gitkeep  students_2026-05-31_183417.json  students_2026-05-31_183422.csv
docker/: Dockerfile  README.md  docker-compose.yml
docker/postgres/: init-db.sql
docker/postgres/schemas/ddl/: s_university.sql
docker/postgres/tables/ddl/: t_courses.sql  t_groups.sql  t_specialties.sql  t_students.sql
docker/postgres/tables/dml/: t_courses.sql  t_groups.sql  t_specialties.sql
docker/postgres/views/ddl/: v_student_full_info.sql
src/: cli.py  config.py  constants.py  main.py
src/api/: __init__.py  exceptions.py  main.py
src/api/routes/: __init__.py  reference.py  students.py
src/models/: __init__.py  course.py  group.py  schemas.py  specialty.py  student.py
src/repositories/: README.md  __init__.py  base_repository.py  database.py  export_repository.py  postgres_repository.py
src/services/: README.md  __init__.py  student_service.py
src/utils/: README.md  __init__.py  seed.py  validators.py
tests/: README.md  conftest.py  test_api.py  test_cli.py  test_database_connection.py  test_models.py  test_repositories.py  test_security.py  test_seed.py  test_seed_demo.py  test_services.py  test_student_service_demo.py  test_validators.py  test_validators_demo.py
